--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,70 @@
+version: '3.8'
+
 services:
+  stats-db:
+    image: postgres:16.1
+    container_name: stats-db
+    environment:
+      POSTGRES_USER: stats
+      POSTGRES_PASSWORD: stats
+      POSTGRES_DB: stats
+    volumes:
+      - stats-db-data:/var/lib/postgresql/data
+    networks:
+      - diploma-net
+    ports:
+      - "5433:5432"  # Порт хоста:контейнера
+
   stats-server:
+    build:
+      context: ./ewm-stat-service/ewm-stat-server
+      dockerfile: Dockerfile
+    container_name: stats-server
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://stats-db:5432/stats
+      SPRING_DATASOURCE_USERNAME: stats
+      SPRING_DATASOURCE_PASSWORD: stats
+    depends_on:
+      - stats-db
+    networks:
+      - diploma-net
     ports:
       - "9090:9090"
 
-  stats-db:
+  ewm-db:
     image: postgres:16.1
+    container_name: ewm-db
+    environment:
+      POSTGRES_USER: ewm
+      POSTGRES_PASSWORD: ewm
+      POSTGRES_DB: ewm
+    volumes:
+      - ewm-db-data:/var/lib/postgresql/data
+    networks:
+      - diploma-net
+    ports:
+      - "5434:5432"
 
   ewm-service:
+    build:
+      context: ./ewm-main-service
+      dockerfile: Dockerfile
+    container_name: ewm-service
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://ewm-db:5432/ewm
+      SPRING_DATASOURCE_USERNAME: ewm
+      SPRING_DATASOURCE_PASSWORD: ewm
+    depends_on:
+      - ewm-db
+    networks:
+      - diploma-net
     ports:
       - "8080:8080"
 
-  ewm-db:
-    image: postgres:16.1
+volumes:
+  stats-db-data:
+  ewm-db-data:
+
+networks:
+  diploma-net:
+    driver: bridge
