добавления сервиса статистики

--- a/ewm-stat-service/ewm-stat-server/src/main/resources/application.properties
+++ b/ewm-stat-service/ewm-stat-server/src/main/resources/application.properties
@@ -1,20 +1,19 @@
-# Server
 server.port=9090
 
-# Database
 spring.datasource.url=jdbc:postgresql://stats-db:5432/stats
 spring.datasource.username=stats
 spring.datasource.password=stats
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5
+
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
-# Liquibase
-spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+spring.sql.init.mode=always
+spring.sql.init.platform=postgres
 
-# Actuator
 management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=always
