--- a/ewm-stat-service/ewm-stat-client/pom.xml
+++ b/ewm-stat-service/ewm-stat-client/pom.xml
@@ -25,6 +25,12 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
 </project>
