--- a/ewm-stat-service/ewm-stat-server/src/main/resources/application-dev.properties
+++ b/ewm-stat-service/ewm-stat-server/src/main/resources/application-dev.properties
@@ -1,20 +1,10 @@
-# Test Configuration
-spring.profiles.active=dev
-
-# H2 Database
-spring.datasource.url=jdbc:h2:mem:stats_test;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# JPA
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.sql.init.mode=always
+spring.sql.init.platform=h2
+spring.jpa.defer-datasource-initialization=true
 
-# Disable Liquibase in tests
-spring.liquibase.enabled=false
-
-# Actuator (optional)
-management.endpoints.web.exposure.include=health
+spring.jpa.hibernate.ddl-auto=none
