--- a/ewm-stat-service/ewm-stat-client/pom.xml
+++ b/ewm-stat-service/ewm-stat-client/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ru.practicum</groupId>
-        <artifactId>explore-with-me</artifactId>
+        <groupId>ru.yandex.practicum</groupId>
+        <artifactId>ewm-stat-service</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
+
 
     <artifactId>ewm-stat-client</artifactId>
 
