--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,19 +34,19 @@ services:
     ports:
       - "9090:9090"
 
-  ewm-db:
-    image: postgres:16.1
-    container_name: ewm-db
-    environment:
-      POSTGRES_USER: ewm
-      POSTGRES_PASSWORD: ewm
-      POSTGRES_DB: ewm
-    volumes:
-      - ewm-db-data:/var/lib/postgresql/data
-    networks:
-      - diploma-net
-    ports:
-      - "5434:5432"
+  #  ewm-db:
+  #  image: postgres:16.1
+  #  container_name: ewm-db
+  #  environment:
+  #    POSTGRES_USER: ewm
+  #    POSTGRES_PASSWORD: ewm
+  #    POSTGRES_DB: ewm
+  #  volumes:
+  #    - ewm-db-data:/var/lib/postgresql/data
+  #  networks:
+  #    - diploma-net
+  #  ports:
+  #    - "5434:5432"
 
   # ewm-service:
   #   build:
@@ -70,4 +70,3 @@ networks:
 
 volumes:
   stats-db-data:
-  ewm-db-data:
