--- a/ewm-stat-service/ewm-stat-dto/pom.xml
+++ b/ewm-stat-service/ewm-stat-dto/pom.xml
@@ -11,6 +11,10 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ewm-stat-dto</artifactId>
 
+    <properties>
+        <java.version>21</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
