--- a/ewm-main-service/Dockerfile
+++ b/ewm-main-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:21-jdk-slim
 WORKDIR /app
-COPY target/ewm-main-service.jar /app/ewm-main-service.jar
+COPY target/ewm-main-service-0.0.1-SNAPSHOT.jar /app/ewm-main-service.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "ewm-main-service.jar"]
