--- a/ewm-stat-service/ewm-stat-client/pom.xml
+++ b/ewm-stat-service/ewm-stat-client/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ru.yandex.practicum</groupId>
+        <groupId>ru.practicum</groupId>
         <artifactId>ewm-stat-service</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
