--- a/ewm-stat-service/ewm-stat-dto/pom.xml
+++ b/ewm-stat-service/ewm-stat-dto/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>ewm-stat-service</artifactId>
-        <groupId>ru.yandex.practicum</groupId>
+        <groupId>ru.practicum</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
