--- a/ewm-stat-service/pom.xml
+++ b/ewm-stat-service/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>ru.yandex.practicum</groupId>
+    <groupId>ru.practicum</groupId>
     <artifactId>ewm-stat-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
