--- a/ewm-stat-service/ewm-stat-client/pom.xml
+++ b/ewm-stat-service/ewm-stat-client/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
 
         <dependency>
-            <groupId>ru.yandex.practicum</groupId>
+            <groupId>ru.practicum</groupId>
             <artifactId>ewm-stat-dto</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
