--- a/ewm-stat-service/ewm-stat-server/pom.xml
+++ b/ewm-stat-service/ewm-stat-server/pom.xml
@@ -36,7 +36,7 @@
         </dependency>
 
         <dependency>
-            <groupId>ru.yandex.practicum</groupId>
+            <groupId>ru.practicum</groupId>
             <artifactId>ewm-stat-dto</artifactId>
             <version>${project.version}</version>
         </dependency>
