base first reviu

--- a/ewm-main-service/Dockerfile
+++ b/ewm-main-service/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:21-jdk-slim
 WORKDIR /app
 COPY target/ewm-main-service-0.0.1-SNAPSHOT.jar /app/ewm-main-service.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "ewm-main-service.jar"]
+ENTRYPOINT ["java", "-jar",  "-Dspring.profiles.active=docker", "ewm-main-service.jar"]
